# UDrive

./: .gitignore  .travis.yml  CMakeLists.txt  Changelog.md  Dockerfile  Doxyfile  INSTALL.md  README.md  build.sh  compilar.sh  hola.json  server.conf
docker/: gtest.sh  rocksdb.sh
docs/: Doxyfile  buildDocs.sh
docs/Cliente/Documentacion_Tecnica/: Makefile  codigo.rst  conf.py  index.rst  librerias_y_compilacion.rst  make.bat
docs/Cliente/Manual_de_Usuario/: index.rst
docs/Manual_de_Proyecto/: conclusion.rst  conf.py  division_de_tareas.rst  gestion.rst  gestion_y_division.rst  index.rst  introduccion.rst
docs/Manual_de_Proyecto/_build/doctrees/: conclusion.doctree  division_de_tareas.doctree  environment.pickle  gestion.doctree  index.doctree  introduccion.doctree
docs/Manual_de_Proyecto/_build/html/: .buildinfo  conclusion.html  division_de_tareas.html  genindex.html  gestion.html  index.html  introduccion.html  objects.inv  search.html  searchindex.js
docs/Manual_de_Proyecto/_build/html/_sources/: introduccion.txt
docs/Servidor/Documentacion_Tecnica/: ambiente_de_desarrollo.rst  api_rest.rst  clases.rst  codigo.rst  disenio.rst  index.rst  introduccion.rst  librerias_y_compilacion.rst  pruebas.rst
docs/Servidor/Documentacion_Tecnica/_build/doctrees/: ambiente_de_desarrollo.doctree  api_rest.doctree  codigo.doctree  disenio.doctree  environment.pickle  index.doctree  librerias_y_compilacion.doctree  pruebas.doctree
docs/Servidor/Documentacion_Tecnica/_build/html/: ambiente_de_desarrollo.html  api_rest.html  codigo.html  disenio.html  genindex.html  index.html  librerias_y_compilacion.html  objects.inv  pruebas.html  search.html  searchindex.js
docs/Servidor/Documentacion_Tecnica/_build/html/_sources/: ambiente_de_desarrollo.txt  api_rest.txt  disenio.txt  librerias_y_compilacion.txt  pruebas.txt
docs/Servidor/Manual_de_administrador/: docker.rst  forma_de_uso.rst  get_started.rst  index.rst  known_issues.rst  known_issues_y_troubleshooting.rst  mantenimiento.rst  manual.rst  troubleshooting.rst
docs/Servidor/Manual_de_administrador/_build/doctrees/: environment.pickle  forma_de_uso.doctree  get_started.doctree  index.doctree  instalacion_y_configuracion.doctree  known_issues_y_troubleshooting.doctree  mantenimiento.doctree
docs/Servidor/Manual_de_administrador/_build/html/: forma_de_uso.html  genindex.html  get_started.html  index.html  instalacion_y_configuracion.html  known_issues_y_troubleshooting.html  mantenimiento.html  objects.inv  search.html  searchindex.js
docs/Servidor/Manual_de_administrador/_build/html/_sources/: get_started.txt  instalacion_y_configuracion.txt  known_issues_y_troubleshooting.txt
include/: Server.h  basededatos.h  batch.h  bd.h  excepciones.h  file.h  folder.h  lanzarServer.h  logger.h  manejadorArchivosYMetadatos.h  manejadorDeUsuarios.h  mapDB.h  metadata.h  metadatos.h  metadatosYConstante.h  metadatosYConstantes.h  parserJson.h  parserURI.h  profile.h  realizadorDeEventos.h  server.h  session.h  validador.h
include/archivosYMetadatos/: buscador.h  manejadorArchivos.h  manejadorArchivosYMetadatos.h  manejadorMetadatos.h  validador.h
include/db/: basededatos.h  batch.h  bd.h  excepciones.h  mapDB.h
include/realizadoresDeEventos/: file.h  folder.h  profile.h  realizadorDeEventos.h  session.h
include/util/: excepciones.h  logger.h  metadatosYConstantes.h  parserJson.h  parserURI.h
pruebasDByGTest/: Addition.cpp  Addition.h  Addition_Test.cpp  CMakeLists.txt  Multiply.cpp  Multiply.h  Multiply_Test.cpp  main.cpp
src/: Server.cpp  Server.h  Server_test.cpp  basededatos.cpp  file.cpp  folder.cpp  logger.cpp  main.cpp  main_rocksdbless.cpp  manejadorArchivosYMetadatos.cpp  manejadorDeUsuarios.cpp  mapDB.cpp  metadata.cpp  parserJson.cpp  profile.cpp  realizadorDeEventos.cpp  server.cpp  session.cpp  validador.cpp
src/archivosYMetadatos/: buscador.cpp  manejadorArchivos.cpp  manejadorArchivosYMetadatos.cpp  manejadorMetadatos.cpp  validador.cpp
src/db/: basededatos.cpp  batch.cpp  mapDB.cpp
src/realizadoresDeEventos/: file.cpp  folder.cpp  metadata.cpp  profile.cpp  realizadorDeEventos.cpp  session.cpp
src/util/: logger.cpp  parserJson.cpp
test/: basededatos_test.cpp  mainTest.cpp  manejadorArchivosYMetadatos_test.cpp  manejadorDeUsuarios_test.cpp  mapDB_test.cpp  parserJson_test.cpp  server_test.py  validador_test.cpp  version_test.py
travis/: compilarGTest.sh  compilarRocksDB.sh
